Bug: On mobile, the pop up modal is to short and user can't press enter

--- a/dinner/src/components/UpdateMenu/updateMenu.css
+++ b/dinner/src/components/UpdateMenu/updateMenu.css
@@ -8,7 +8,8 @@
     border-radius: 8px;
     padding: 10px 10px;
     max-width: 281px;
-    max-height: 410px;
+    /* max-height: 410px; */
+    max-height: 75vh;
     position: fixed;
     z-index: 1;
     top:0;
